# growing-simpletons

./: .travis.yml  Cargo.toml  Makefile  README.md  TODO.md
body_tree/: Cargo.toml
body_tree/src/: body.rs  lib.rs  serialise.rs  tree.rs
generic_mutation/: Cargo.toml
generic_mutation/src/: lib.rs
renderer/: Cargo.toml  population.json
renderer/src/: main.rs
src/: body.rs  lib.rs  physics.rs  renderer.rs  tree.rs
