[package]
name = "body_tree"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]

[dependencies]
nalgebra = "0.14"
ncollide3d = "0.15"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
serde_derive = "1.0"
petgraph = { version = "0.4", features = ["serde-1"] }
rand = "0.5.0"
generic_mutation = { path = "../generic_mutation", features = ["serialize"] }
derive-new = "0.5.4"
